macOS: Add crypto lib as variable and include dir
On macOS add variable "crypto" to slarchive and include directory of OpenSSL

--- a/apps/3rd-party/slarchive/src/CMakeLists.txt
+++ b/apps/3rd-party/slarchive/src/CMakeLists.txt
@@ -10,7 +10,12 @@ INCLUDE_DIRECTORIES(../../../../libs/3rd-party/libslink)
 
 ADD_EXECUTABLE(slarchive ${SLARCHIVE_SOURCES})
 
-TARGET_LINK_LIBRARIES(slarchive slink crypto)
+IF(APPLE)
+    TARGET_LINK_LIBRARIES(slarchive slink ${crypto})
+    INCLUDE_DIRECTORIES(${OPENSSL_INCLUDE_DIR})
+ELSE()
+    TARGET_LINK_LIBRARIES(slarchive slink crypto)
+ENDIF(APPLE)
 
 INSTALL(TARGETS slarchive
 	RUNTIME DESTINATION ${SC3_PACKAGE_BIN_DIR})
