--- a/plugins/minilogger_plugin/CMakeLists.txt
+++ b/plugins/minilogger_plugin/CMakeLists.txt
@@ -11,6 +11,11 @@ SET(MINILOGGER_PLUGIN_SOURCES
 
 INCLUDE_DIRECTORIES(../../libs/plugin ${LIBMSEED_INCLUDE_DIR})
 ADD_EXECUTABLE(minilogger_plugin ${MINILOGGER_PLUGIN_SOURCES})
-TARGET_LINK_LIBRARIES(minilogger_plugin rt slplugin ${LIBMSEED_LIBRARY})
+IF (APPLE)
+    # On macOS don't use librt (realtime lib)
+    TARGET_LINK_LIBRARIES(minilogger_plugin slplugin ${LIBMSEED_LIBRARY})
+ELSE()
+    TARGET_LINK_LIBRARIES(minilogger_plugin rt slplugin ${LIBMSEED_LIBRARY})
+ENDIF (APPLE)
 INSTALL(TARGETS minilogger_plugin RUNTIME DESTINATION ${SEEDLINK_PLUGIN_OUTPUT_DIR})
 
